syntax = "proto3";

option go_package = "github.com/Jefschlarski/ps-intelbras-iot/telemetry_producer/src/grpc";

package telemetry;
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service TelemetryService {
    rpc event(Event) returns (google.protobuf.Empty) {}
    rpc batchEvents(EventBatch) returns (google.protobuf.Empty) {}
    rpc streamEvents(stream Event) returns (google.protobuf.Empty) {}
}

message EventBatch {
    repeated Event event_batch= 1;
}

message Event {
  int64 device_id = 1;
  int32 type = 2;
  google.protobuf.Timestamp time = 3;
  oneof sensor{
    int32 value_int = 4;
    float value_float = 5;
    string value_string = 6;
  }
}